Fixed text on buy button as well as pages for product and cart but may still need tweaks for RMD. Image links need fixed as 14 problems currently. Also text if buttons will make calls to Ajax API

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -175,6 +175,17 @@ body {
   scale: 1.1;
   transition: all 0.3s ease-in-out;
 }
+
+/* Reveals More Options for payments */
+.shopify-payment-button__more-options {
+  color: var(--green) !important;
+  text-decoration: none !important;
+}
+
+.shopify-payment-button__more-options:hover {
+  color: var(--green900) !important;
+  text-decoration: underline var(--blue) !important;
+}
 /** Section layout utilities */
 
 /**
